# diagrams-opengl

./: .gitignore  LICENSE  README.md  diagrams-opengl.cabal  stack.yaml
examples/: TextureFragmentShader.fragmentshader  TransformVertexShader.vertexshader  clipping.hs  curves.hs  ellipsoids.hs  fillRule.hs  gallery.hs  lineForm.hs  lines.hs  pathLike.hs  polygons.hs  segments.hs  solids.hs  transparency.hs
src/Diagrams/Backend/: OpenGL.hs
src/Diagrams/Backend/OpenGL/: CmdLine.hs  ThreeD.hs  TwoD.hs  Types.hs
src/Diagrams/Backend/OpenGL/ThreeD/: CmdLine.hs
src/Diagrams/Backend/OpenGL/TwoD/: Attributes.hs  CmdLine.hs  Outlines.hs  Tesselate.hs
src/Graphics/Diagrams/: OpenGL.hs
src/Graphics/Rendering/: Util.hs  util.f.glsl  util.v.glsl
src/Graphics/Rendering/Util/: GLFW.hs  ThreeD.hs  TwoD.hs
