Name:                diagrams-opengl
Version:             1.0
Synopsis:            OpenGL backend for diagrams drawing EDSL.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README.md
Author:              Daniel Bergey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/bergey/diagrams-opengl/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC == 7.4.1
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL to screen.
                     It uses @OpenGL@ to call the platform-independant graphics
                     API in a type-safe fashion.
                     .
                     The package provides the following modules:
                     .
                     * "Diagrams.Backend.OpenGL.CmdLine" - if you're
                       just getting started with diagrams, begin here.
                     .
                     * "Diagrams.Backend.OpenGL" - look at this next.
                       The general API for the OpenGL backend.
                     .
                     Additional documentation can be found in the
                     README file distributed with the source tarball or
                     viewable on GitHub:
                     <https://github.com/bergey/diagrams-opengl/blob/master/README.md>.
Source-repository head
  type:     git
  location: http://github.com/bergey/diagrams-opengl

Library
  Exposed-modules:     Diagrams.Backend.OpenGL
                       Diagrams.Backend.OpenGL.CmdLine
  Other-modules:       Graphics.Rendering.Util 
  Hs-source-dirs:      src
  Build-depends:       base          >= 4.3   && < 4.7
                     , GLUT          >= 2.3   && < 2.5
                     , OpenGL        >= 2.6   && < 2.9
                     , cmdargs       >= 0.6   && < 0.11
                     , colour
                     , containers    >= 0.4   && < 0.6
                     , diagrams-core >= 1.0   && < 1.1
                     , diagrams-lib  >= 1.0   && < 1.1
                     , lens          >= 3.9   && < 3.11
                     , monoid-extras >= 0.3   && < 0.4
                     , mtl           >= 1     && < 2.2
                     , semigroups    >= 0.3.4 && < 0.13
                     , vector        >= 0.10  && < 0.11
                     , vector-space  >= 0.7   && < 0.9
  if !os(windows)
    cpp-options: -DCMDLINELOOP
    Build-depends:     unix >= 2.4 && < 2.7

  Ghc-options:         -Wall

  Default-language:  Haskell2010
