Name:                diagrams-opengl
Version:             1.0
Synopsis:            OpenGL backend for diagrams drawing EDSL.
Homepage:            http://projects.haskell.org/diagrams/
License:             BSD3
License-file:        LICENSE
Extra-source-files:  README.md
Author:              Daniel Bergey
Maintainer:          diagrams-discuss@googlegroups.com
Bug-reports:         http://github.com/bergey/diagrams-opengl/issues
Stability:           Experimental
Category:            Graphics
Build-type:          Simple
Cabal-version:       >=1.10
Tested-with:         GHC == 7.6.3, GHC == 7.8.2
Description:         This package provides a modular backend for rendering
                     diagrams created with the diagrams EDSL to screen.
                     It uses @OpenGL@ to call the platform-independant graphics
                     API in a type-safe fashion.
                     .
                     The package provides the following modules:
                     .
                     * "Diagrams.Backend.OpenGL.CmdLine" - if you're
                       just getting started with diagrams, begin here.
                     .
                     * "Diagrams.Backend.OpenGL" - look at this next.
                       The general API for the OpenGL backend.
                     .
                     Additional documentation can be found in the
                     README file distributed with the source tarball or
                     viewable on GitHub:
                     <https://github.com/bergey/diagrams-opengl/blob/master/README.md>.
Source-repository head
  type:     git
  location: http://github.com/bergey/diagrams-opengl

Library
  Exposed-modules:     Diagrams.Backend.OpenGL
                       Diagrams.Backend.OpenGL.CmdLine
  Other-modules:       Graphics.Rendering.Util
                       Graphics.Rendering.Util.GLFW
                       Diagrams.Backend.OpenGL.TwoD.Attributes
                       Diagrams.Backend.OpenGL.TwoD.Outlines
                       Diagrams.Backend.OpenGL.TwoD.Tesselate
  Hs-source-dirs:      src
  Build-depends:       base
                     , OpenGL
                     , cmdargs
                     , colour
                     , containers
                     , diagrams-core
                     , diagrams-lib
                     , lens
                     , monoid-extras
                     , mtl
                     , semigroups
                     , vector
                     , vector-space
                     , GLUtil
                     , GLFW-b
                     , filepath
                     , linear
                     , vinyl-gl
                     , vinyl
                     , bytestring
                     , file-embed
  if !os(windows)
    cpp-options: -DCMDLINELOOP
    Build-depends:     unix >= 2.4 && < 2.8

  Ghc-options:         -Wall

  Default-language:  Haskell2010
